@@ -1,3 +1,8 @@
+2001-11-18  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* scheme-data.texi (String Modification, Vectors): Autoupdate docs
+	for substring-move!, vector-move-left! and vector-move-right!.
+
 2001-11-14  Thien-Thi Nguyen  <ttn@glug.org>
 
 	* scheme-procedures.texi: Spell "library" correctly.
